syntax = "proto3";
import "google/api/annotations.proto";
import "Dto/accommodation.proto";
option csharp_namespace = "JetSetGo.RecommodationSystem.Grpc";
service AccommodationApp{
  rpc CreateAccommodation(CreateAccommodationRequest) returns (CreateAccommodationResponse){
    option(google.api.http)={
      post :"/api/v1/reccomodation/accommodation",
      body: "accommodation"
    };
  }
}